Refactor Collection Implementations: Drop Guava for Java Native