@@ -1,11 +1,6 @@
 package org.monarchinitiative.gregor.pedigree;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashSet;
+import java.util.*;
 
 // TODO(holtgrem): Test me!
 
@@ -25,12 +20,12 @@ public final class Pedigree {
 	/**
 	 * the pedigree's members
 	 */
-	private final ImmutableList<Person> members;
+	private final List<Person> members;
 
 	/**
 	 * mapping from member name to member
 	 */
-	private final ImmutableMap<String, IndexedPerson> nameToMember;
+	private final Map<String, IndexedPerson> nameToMember;
 
 	/**
 	 * Initialize the object with the given values
@@ -40,13 +35,13 @@ public final class Pedigree {
 	 */
 	public Pedigree(String name, Collection<Person> members) {
 		this.name = name;
-		this.members = ImmutableList.copyOf(members);
+		this.members = List.copyOf(members);
 
-		ImmutableMap.Builder<String, IndexedPerson> mapBuilder = new ImmutableMap.Builder<String, IndexedPerson>();
+		Map<String, IndexedPerson> map = new LinkedHashMap<>();
 		int i = 0;
 		for (Person person : members)
-			mapBuilder.put(person.getName(), new IndexedPerson(i++, person));
-		this.nameToMember = mapBuilder.build();
+			map.put(person.getName(), new IndexedPerson(i++, person));
+		this.nameToMember = Collections.unmodifiableMap(map);
 	}
 
 	/**
@@ -78,14 +73,14 @@ public final class Pedigree {
 	/**
 	 * @return the pedigree's members
 	 */
-	public ImmutableList<Person> getMembers() {
+	public List<Person> getMembers() {
 		return members;
 	}
 
 	/**
 	 * @return mapping from member name to member
 	 */
-	public ImmutableMap<String, IndexedPerson> getNameToMember() {
+	public Map<String, IndexedPerson> getNameToMember() {
 		return nameToMember;
 	}
 
@@ -118,7 +113,7 @@ public final class Pedigree {
 	 */
 	public static Pedigree constructSingleSamplePedigree(String sampleName) {
 		final Person person = new Person(sampleName, null, null, Sex.UNKNOWN, Disease.AFFECTED);
-		return new Pedigree("pedigree", ImmutableList.of(person));
+		return new Pedigree("pedigree", List.of(person));
 	}
 
 	/**
@@ -131,11 +126,11 @@ public final class Pedigree {
 	/**
 	 * @return list of members, in the same order as in {@link #members}.
 	 */
-	public ImmutableList<String> getNames() {
-		ImmutableList.Builder<String> builder = new ImmutableList.Builder<String>();
+	public List<String> getNames() {
+		List<String> names = new ArrayList<>();
 		for (Person p : members)
-			builder.add(p.getName());
-		return builder.build();
+			names.add(p.getName());
+		return Collections.unmodifiableList(names);
 	}
 
 	@Override
